--- a/House_Prediction_Project/requirements.txt
+++ b/House_Prediction_Project/requirements.txt
@@ -1,126 +1,305 @@
-altair==4.1.0
-argh @ file:///home/conda/feedstock_root/build_artifacts/argh_1595627874344/work
-argon2-cffi @ file:///D:/bld/argon2-cffi_1605217273648/work
-astor @ file:///home/conda/feedstock_root/build_artifacts/astor_1593610464257/work
+-ensorflow-gpu @ https://storage.googleapis.com/tensorflow/windows/gpu/tensorflow_gpu-2.4.0-cp38-cp38-win_amd64.whl
+-illow @ file:///C:/ci/pillow_1603823068645/work
+absl-py==0.12.0
+alabaster==0.7.12
+anaconda-client==1.7.2
+anaconda-navigator==1.10.0
+anaconda-project==0.8.3
+appdirs @ file:///home/conda/feedstock_root/build_artifacts/appdirs_1603108395799/work
+argh==0.26.2
+argon2-cffi @ file:///C:/ci/argon2-cffi_1596828585465/work
+arviz @ file:///home/conda/feedstock_root/build_artifacts/arviz_1613942767734/work
+asn1crypto @ file:///tmp/build/80754af9/asn1crypto_1596577642040/work
+astroid @ file:///C:/ci/astroid_1592487315634/work
+astropy==4.0.2
+astunparse==1.6.3
 async-generator==1.10
-attrs @ file:///home/conda/feedstock_root/build_artifacts/attrs_1620387926260/work
-backcall @ file:///home/conda/feedstock_root/build_artifacts/backcall_1592338393461/work
-backports.functools-lru-cache @ file:///home/conda/feedstock_root/build_artifacts/backports.functools_lru_cache_1618230623929/work
-base58 @ file:///home/conda/feedstock_root/build_artifacts/base58_1610222858736/work
-bleach @ file:///home/conda/feedstock_root/build_artifacts/bleach_1612213472466/work
-blinker==1.4
-boto3 @ file:///home/conda/feedstock_root/build_artifacts/boto3_1620426322050/work
-botocore @ file:///home/conda/feedstock_root/build_artifacts/botocore_1620421575125/work
+atomicwrites==1.4.0
+attrs @ file:///tmp/build/80754af9/attrs_1604765588209/work
+autopep8 @ file:///tmp/build/80754af9/autopep8_1596578164842/work
+Babel @ file:///tmp/build/80754af9/babel_1605108370292/work
+backcall==0.2.0
+backports.functools-lru-cache==1.6.1
+backports.shutil-get-terminal-size==1.0.0
+backports.tempfile==1.0
+backports.weakref==1.0.post1
+bcrypt @ file:///C:/ci/bcrypt_1597936263757/work
+beautifulsoup4 @ file:///tmp/build/80754af9/beautifulsoup4_1601924105527/work
+bitarray @ file:///C:/ci/bitarray_1605065210072/work
+bkcharts==0.2
+bleach @ file:///tmp/build/80754af9/bleach_1600439572647/work
+bokeh @ file:///C:/ci/bokeh_1603297934731/work
+boto==2.49.0
+Bottleneck==1.3.2
 brotlipy==0.7.0
-cachetools @ file:///home/conda/feedstock_root/build_artifacts/cachetools_1619593780156/work
+cached-property @ file:///home/conda/feedstock_root/build_artifacts/cached_property_1615209429212/work
+cachetools==4.2.1
+catboost==0.24.4
 certifi==2020.12.5
-cffi @ file:///D:/bld/cffi_1613414140225/work
-chardet @ file:///D:/bld/chardet_1610093646853/work
+cffi @ file:///C:/ci/cffi_1600699246375/work
+cftime @ file:///D:/bld/cftime_1612246574930/work
+chardet==3.0.4
 click==7.1.2
-cloudpickle @ file:///home/conda/feedstock_root/build_artifacts/cloudpickle_1598400192773/work
-colorama @ file:///home/conda/feedstock_root/build_artifacts/colorama_1602866480661/work
-cryptography @ file:///D:/bld/cryptography_1616851649655/work
+cloudpickle @ file:///tmp/build/80754af9/cloudpickle_1598884132938/work
+clyent==1.2.2
+colorama @ file:///tmp/build/80754af9/colorama_1603211150991/work
+comtypes==1.1.7
+conda==4.10.1
+conda-build==3.20.5
+conda-package-handling @ file:///C:/ci/conda-package-handling_1603003327818/work
+conda-verify==3.4.2
+contextlib2==0.6.0.post1
+convertdate @ file:///home/conda/feedstock_root/build_artifacts/convertdate_1615678826465/work
+cryptography @ file:///C:/ci/cryptography_1601046905460/work
 cycler==0.10.0
-decorator @ file:///home/conda/feedstock_root/build_artifacts/decorator_1618380339289/work
-defusedxml @ file:///home/conda/feedstock_root/build_artifacts/defusedxml_1615232257335/work
-entrypoints @ file:///home/conda/feedstock_root/build_artifacts/entrypoints_1605121927639/work/dist/entrypoints-0.3-py2.py3-none-any.whl
+Cython @ file:///C:/ci/cython_1594829190914/work
+cytoolz==0.11.0
+dask @ file:///tmp/build/80754af9/dask-core_1602083700509/work
+decorator==4.4.2
+defusedxml==0.6.0
+diff-match-patch @ file:///tmp/build/80754af9/diff-match-patch_1594828741838/work
+distributed @ file:///C:/ci/distributed_1605066635297/work
+docutils==0.16
+docx2pdf==0.1.7
+entrypoints==0.3
+ephem @ file:///D:/bld/ephem_1602326724695/work
+et-xmlfile==1.0.1
+fastcache==1.1.0
+fbprophet @ file:///D:/bld/fbprophet_1599365958928/work
+filelock==3.0.12
+flake8 @ file:///tmp/build/80754af9/flake8_1601911421857/work
 Flask==1.1.2
-future @ file:///D:/bld/future_1610147454374/work
-gitdb @ file:///home/conda/feedstock_root/build_artifacts/gitdb_1616781027402/work
-GitPython @ file:///home/conda/feedstock_root/build_artifacts/gitpython_1619081316745/work
+flatbuffers==1.12
+fsspec @ file:///tmp/build/80754af9/fsspec_1602684995936/work
+future==0.18.2
+gast==0.3.3
+gevent @ file:///C:/ci/gevent_1601397627942/work
+glob2==0.7
+gmpy2==2.0.8
+google-auth==1.28.0
+google-auth-oauthlib==0.4.4
+google-pasta==0.2.0
+graphviz==0.16
+greenlet @ file:///C:/ci/greenlet_1600885448389/work
+grpcio==1.32.0
 gym==0.18.0
-hyperopt @ file:///home/conda/feedstock_root/build_artifacts/hyperopt_1602661729544/work
-idna @ file:///home/conda/feedstock_root/build_artifacts/idna_1593328102638/work
-importlib-metadata @ file:///D:/bld/importlib-metadata_1619012356363/work
-ipykernel @ file:///D:/bld/ipykernel_1617137223378/work/dist/ipykernel-5.5.3-py3-none-any.whl
-ipython @ file:///D:/bld/ipython_1619827332417/work
+h5py @ file:///D:/bld/h5py_1604753864980/work
+HeapDict==1.0.1
+hijri-converter @ file:///home/conda/feedstock_root/build_artifacts/hijri-converter_1612531902526/work
+holidays @ file:///home/conda/feedstock_root/build_artifacts/holidays_1617373843485/work
+html5lib @ file:///tmp/build/80754af9/html5lib_1593446221756/work
+idna @ file:///tmp/build/80754af9/idna_1593446292537/work
+imageio @ file:///tmp/build/80754af9/imageio_1594161405741/work
+imagesize==1.2.0
+importlib-metadata @ file:///tmp/build/80754af9/importlib-metadata_1602276842396/work
+iniconfig @ file:///tmp/build/80754af9/iniconfig_1602780191262/work
+intervaltree @ file:///tmp/build/80754af9/intervaltree_1598376443606/work
+ipykernel @ file:///C:/ci/ipykernel_1596190155316/work/dist/ipykernel-5.3.4-py3-none-any.whl
+ipython @ file:///C:/ci/ipython_1604083276484/work
 ipython-genutils==0.2.0
-ipywidgets @ file:///home/conda/feedstock_root/build_artifacts/ipywidgets_1609995587151/work
+ipywidgets @ file:///tmp/build/80754af9/ipywidgets_1601490159889/work
+isort @ file:///tmp/build/80754af9/isort_1602603989581/work
 itsdangerous==1.1.0
-jedi @ file:///D:/bld/jedi_1610146948662/work
-Jinja2 @ file:///home/conda/feedstock_root/build_artifacts/jinja2_1612119311452/work
-jmespath @ file:///home/conda/feedstock_root/build_artifacts/jmespath_1589369830981/work
-joblib @ file:///home/conda/feedstock_root/build_artifacts/joblib_1612898609989/work
-jsonschema @ file:///home/conda/feedstock_root/build_artifacts/jsonschema_1614815863336/work
-jupyter-client @ file:///home/conda/feedstock_root/build_artifacts/jupyter_client_1615693636836/work
-jupyter-core @ file:///D:/bld/jupyter_core_1612125450516/work
-jupyterlab-pygments @ file:///home/conda/feedstock_root/build_artifacts/jupyterlab_pygments_1601375948261/work
-jupyterlab-widgets @ file:///home/conda/feedstock_root/build_artifacts/jupyterlab_widgets_1609173350931/work
-kiwisolver @ file:///D:/bld/kiwisolver_1610099948875/work
-lightgbm @ file:///D:/bld/lightgbm_1618922759859/work
-MarkupSafe @ file:///D:/bld/markupsafe_1610127683324/work
-matplotlib @ file:///D:/bld/matplotlib-suite_1617212937240/work
-matplotlib-inline @ file:///home/conda/feedstock_root/build_artifacts/matplotlib-inline_1618935594181/work
-mistune @ file:///D:/bld/mistune_1610113104461/work
-nbclient @ file:///home/conda/feedstock_root/build_artifacts/nbclient_1614336084111/work
-nbconvert @ file:///D:/bld/nbconvert_1605402041690/work
-nbformat @ file:///home/conda/feedstock_root/build_artifacts/nbformat_1617383142101/work
-nest-asyncio @ file:///home/conda/feedstock_root/build_artifacts/nest-asyncio_1617163391303/work
-networkx==2.3
-notebook @ file:///home/conda/feedstock_root/build_artifacts/notebook_1618415081862/work
-numpy @ file:///D:/bld/numpy_1616933441329/work
-olefile @ file:///home/conda/feedstock_root/build_artifacts/olefile_1602866521163/work
-packaging @ file:///home/conda/feedstock_root/build_artifacts/packaging_1612459636436/work
-pandas @ file:///D:/bld/pandas_1618263791034/work
-pandas-profiling==1.4.1
-pandocfilters==1.4.3
-parso @ file:///home/conda/feedstock_root/build_artifacts/parso_1617148930513/work
+jdcal==1.4.1
+jedi @ file:///C:/ci/jedi_1592833825077/work
+Jinja2==2.11.2
+joblib @ file:///tmp/build/80754af9/joblib_1601912903842/work
+json5==0.9.5
+jsonschema @ file:///tmp/build/80754af9/jsonschema_1602607155483/work
+jupyter==1.0.0
+jupyter-client @ file:///tmp/build/80754af9/jupyter_client_1601311786391/work
+jupyter-console @ file:///tmp/build/80754af9/jupyter_console_1598884538475/work
+jupyter-core==4.6.3
+jupyterlab==2.2.6
+jupyterlab-pygments @ file:///tmp/build/80754af9/jupyterlab_pygments_1601490720602/work
+jupyterlab-server @ file:///tmp/build/80754af9/jupyterlab_server_1594164409481/work
+Keras==2.4.3
+Keras-Preprocessing==1.1.2
+keyring @ file:///C:/ci/keyring_1601489747083/work
+kiwisolver @ file:///C:/ci/kiwisolver_1604014703538/work
+korean-lunar-calendar @ file:///home/conda/feedstock_root/build_artifacts/korean_lunar_calendar_1589354365811/work
+lazy-object-proxy==1.4.3
+libarchive-c==2.9
+llvmlite==0.34.0
+locket==0.2.0
+LunarCalendar==0.0.9
+lxml @ file:///C:/ci/lxml_1603216366346/work
+Markdown==3.3.4
+MarkupSafe==1.1.1
+matplotlib @ file:///C:/ci/matplotlib-base_1603355780617/work
+mccabe==0.6.1
+menuinst==1.4.16
+mistune==0.8.4
+mkl-fft==1.2.0
+mkl-random==1.1.1
+mkl-service==2.3.0
+mock==4.0.2
+more-itertools @ file:///tmp/build/80754af9/more-itertools_1605111547926/work
+mpmath==1.1.0
+msgpack==1.0.0
+multipledispatch==0.6.0
+navigator-updater==0.2.1
+nbclient @ file:///tmp/build/80754af9/nbclient_1602783176460/work
+nbconvert @ file:///C:/ci/nbconvert_1601914925608/work
+nbformat @ file:///tmp/build/80754af9/nbformat_1602783287752/work
+nest-asyncio @ file:///tmp/build/80754af9/nest-asyncio_1605115881283/work
+netCDF4 @ file:///C:/ci/netcdf4_1613684374643/work
+networkx @ file:///tmp/build/80754af9/networkx_1598376031484/work
+nibabel==3.2.1
+nltk @ file:///tmp/build/80754af9/nltk_1592496090529/work
+nose==1.3.7
+notebook @ file:///C:/ci/notebook_1601501643625/work
+numba==0.51.2
+numexpr==2.7.1
+numpy @ file:///C:/ci/numpy_and_numpy_base_1603466732592/work
+numpydoc @ file:///tmp/build/80754af9/numpydoc_1605117425582/work
+oauthlib==3.1.0
+olefile==0.46
+opencv-python==4.5.1.48
+openpyxl @ file:///tmp/build/80754af9/openpyxl_1598113097404/work
+opt-einsum==3.3.0
+packaging==20.4
+pandas @ file:///C:/ci/pandas_1602083338010/work
+pandocfilters @ file:///C:/ci/pandocfilters_1605102497129/work
+paramiko @ file:///tmp/build/80754af9/paramiko_1598886428689/work
+parso==0.7.0
+partd==1.1.0
+path @ file:///C:/ci/path_1598358556930/work
+pathlib2==2.3.5
+pathtools==0.1.2
 patsy==0.5.1
-pickleshare @ file:///home/conda/feedstock_root/build_artifacts/pickleshare_1602536217715/work
-Pillow==8.2.0
+pdfminer @ file:///home/conda/feedstock_root/build_artifacts/pdfminer_1613401440402/work
+pep8==1.7.1
+pexpect==4.8.0
+pickleshare==0.7.5
+Pillow @ file:///C:/ci/pillow_1617386341487/work
+pkginfo==1.6.1
 plotly==4.14.3
-prometheus-client @ file:///home/conda/feedstock_root/build_artifacts/prometheus_client_1617909193315/work
-prompt-toolkit @ file:///home/conda/feedstock_root/build_artifacts/prompt-toolkit_1616432837031/work
-protobuf==3.15.8
-pyarrow==4.0.0
-pycparser @ file:///home/conda/feedstock_root/build_artifacts/pycparser_1593275161868/work
-pydeck @ file:///home/conda/feedstock_root/build_artifacts/pydeck_1618346240213/work
-Pygments==2.9.0
-pymongo @ file:///D:/bld/pymongo_1617619307276/work
-pyOpenSSL @ file:///home/conda/feedstock_root/build_artifacts/pyopenssl_1608055815057/work
+pluggy==0.13.1
+ply==3.11
+pooch @ file:///home/conda/feedstock_root/build_artifacts/pooch_1606467285986/work
+prometheus-client==0.8.0
+prompt-toolkit @ file:///tmp/build/80754af9/prompt-toolkit_1602688806899/work
+protobuf==3.15.6
+psutil @ file:///C:/ci/psutil_1598370330503/work
+py @ file:///tmp/build/80754af9/py_1593446248552/work
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycodestyle==2.6.0
+pycosat==0.6.3
+pycparser @ file:///tmp/build/80754af9/pycparser_1594388511720/work
+pycryptodome @ file:///D:/bld/pycryptodome_1612879949399/work
+pycurl==7.43.0.6
+pydocstyle @ file:///tmp/build/80754af9/pydocstyle_1598885001695/work
+pyflakes==2.2.0
+pyglet==1.5.0
+Pygments @ file:///tmp/build/80754af9/pygments_1604103097372/work
+pylint @ file:///C:/ci/pylint_1598617153160/work
+PyMeeus @ file:///home/conda/feedstock_root/build_artifacts/pymeeus_1615809745702/work
+PyNaCl @ file:///C:/ci/pynacl_1595000047588/work
+pyodbc===4.0.0-unsupported
+pyOpenSSL @ file:///tmp/build/80754af9/pyopenssl_1594392929924/work
 pyparsing==2.4.7
-PyQt5==5.12.3
-PyQt5-sip==4.19.18
-PyQtChart==5.12
-PyQtWebEngine==5.12.1
-pyrsistent @ file:///D:/bld/pyrsistent_1610147004705/work
-PySocks @ file:///D:/bld/pysocks_1610291742246/work
+PyPDF2==1.26.0
+pyreadline==2.1
+pyrsistent @ file:///C:/ci/pyrsistent_1600141795814/work
+PySocks==1.7.1
+pystan==2.19.1.1
+pytest==0.0.0
 python-dateutil==2.8.1
-pytz @ file:///home/conda/feedstock_root/build_artifacts/pytz_1612179539967/work
-pywin32==300
-pywinpty @ file:///D:/bld/pywinpty_1619650594251/work/target/wheels/pywinpty-1.0.1-cp38-none-any.whl
-PyYAML==5.4.1
-pyzmq @ file:///D:/bld/pyzmq_1614611907285/work
-requests @ file:///home/conda/feedstock_root/build_artifacts/requests_1608156231189/work
+python-jsonrpc-server @ file:///tmp/build/80754af9/python-jsonrpc-server_1600278539111/work
+python-language-server @ file:///tmp/build/80754af9/python-language-server_1600454544709/work
+pytz==2020.1
+PyWavelets @ file:///C:/ci/pywavelets_1601658407916/work
+pywebio==1.2.3
+pywin32==227
+pywin32-ctypes==0.2.0
+pywinpty==0.5.7
+PyYAML==5.3.1
+pyzmq==19.0.2
+QDarkStyle==2.8.1
+QtAwesome @ file:///tmp/build/80754af9/qtawesome_1602272867890/work
+qtconsole @ file:///tmp/build/80754af9/qtconsole_1600870028330/work
+QtPy==1.9.0
+regex @ file:///C:/ci/regex_1602770567298/work
+requests @ file:///tmp/build/80754af9/requests_1592841827918/work
+requests-oauthlib==1.3.0
 retrying==1.3.3
-s3transfer @ file:///home/conda/feedstock_root/build_artifacts/s3transfer_1619138243643/work
-scikit-learn @ file:///D:/bld/scikit-learn_1619628780927/work
-scipy @ file:///C:/bld/scipy_1619562091939/work
-seaborn==0.11.1
+rope @ file:///tmp/build/80754af9/rope_1602264064449/work
+rsa==4.7.2
+Rtree==0.9.4
+ruamel-yaml==0.15.87
+scikit-image==0.18.1
+scikit-learn @ file:///C:/ci/scikit-learn_1598377018496/work
+scipy @ file:///C:/ci/scipy_1604596260408/work
+seaborn @ file:///tmp/build/80754af9/seaborn_1600553570093/work
+selenium @ file:///C:/ci/selenium_1614268348533/work
 Send2Trash==1.5.0
-six @ file:///home/conda/feedstock_root/build_artifacts/six_1590081179328/work
-sklearn==0.0
-smmap @ file:///home/conda/feedstock_root/build_artifacts/smmap_1611376390914/work
-statsmodels==0.12.2
-streamlit @ file:///home/conda/feedstock_root/build_artifacts/streamlit_1620159617620/work
-terminado @ file:///D:/bld/terminado_1617048799047/work
+simplegeneric==0.8.1
+singledispatch @ file:///tmp/build/80754af9/singledispatch_1602523705405/work
+sip==4.19.13
+six @ file:///C:/ci/six_1605187374963/work
+sklearn-pandas==2.0.4
+snowballstemmer==2.0.0
+sortedcollections==1.2.1
+sortedcontainers==2.2.2
+soupsieve==2.0.1
+Sphinx @ file:///tmp/build/80754af9/sphinx_1597428793432/work
+sphinxcontrib-applehelp==1.0.2
+sphinxcontrib-devhelp==1.0.2
+sphinxcontrib-htmlhelp==1.0.3
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==1.0.3
+sphinxcontrib-serializinghtml==1.1.4
+sphinxcontrib-websupport @ file:///tmp/build/80754af9/sphinxcontrib-websupport_1597081412696/work
+spyder @ file:///C:/ci/spyder_1599054115447/work
+spyder-kernels @ file:///C:/ci/spyder-kernels_1599051709837/work
+SQLAlchemy @ file:///C:/ci/sqlalchemy_1603818908746/work
+statsmodels==0.12.0
+sympy @ file:///C:/ci/sympy_1605101511098/work
+tables==3.6.1
+tb-nightly==2.5.0a20210410
+tblib @ file:///tmp/build/80754af9/tblib_1597928476713/work
+tensorboard==2.4.1
+tensorboard-data-server==0.6.0
+tensorboard-plugin-wit==1.8.0
+tensorflow==2.4.1
+tensorflow-estimator==2.4.0
+tensorflow-hub==0.11.0
+termcolor==1.1.0
+terminado==0.9.1
 testpath==0.4.4
-threadpoolctl @ file:///tmp/tmp79xdzxkt/threadpoolctl-2.1.0-py3-none-any.whl
-toml @ file:///home/conda/feedstock_root/build_artifacts/toml_1604308577558/work
-toolz @ file:///home/conda/feedstock_root/build_artifacts/toolz_1600973991856/work
-tornado @ file:///D:/bld/tornado_1610094858390/work
-tqdm @ file:///home/conda/feedstock_root/build_artifacts/tqdm_1617680194207/work
-traitlets @ file:///home/conda/feedstock_root/build_artifacts/traitlets_1602771532708/work
-typing-extensions @ file:///home/conda/feedstock_root/build_artifacts/typing_extensions_1602702424206/work
-tzlocal @ file:///home/conda/feedstock_root/build_artifacts/tzlocal_1588939190034/work
-urllib3 @ file:///home/conda/feedstock_root/build_artifacts/urllib3_1615828766818/work
-validators @ file:///home/conda/feedstock_root/build_artifacts/validators_1608296160673/work
-watchdog @ file:///D:/bld/watchdog_1620191578595/work
-wcwidth @ file:///home/conda/feedstock_root/build_artifacts/wcwidth_1600965781394/work
+threadpoolctl @ file:///tmp/tmp9twdgx9k/threadpoolctl-2.1.0-py3-none-any.whl
+tifffile==2020.10.1
+toml @ file:///tmp/build/80754af9/toml_1592853716807/work
+toolz @ file:///tmp/build/80754af9/toolz_1601054250827/work
+tornado==6.0.4
+tqdm @ file:///tmp/build/80754af9/tqdm_1602185206534/work
+traitlets @ file:///tmp/build/80754af9/traitlets_1602787416690/work
+typing-extensions @ file:///tmp/build/80754af9/typing_extensions_1598376058250/work
+ua-parser==0.10.0
+ujson @ file:///C:/ci/ujson_1602505266082/work
+unicodecsv==0.14.1
+urllib3 @ file:///tmp/build/80754af9/urllib3_1603305693037/work
+user-agents==2.2.0
+watchdog @ file:///C:/ci/watchdog_1593447437088/work
+wcwidth @ file:///tmp/build/80754af9/wcwidth_1593447189090/work
 webencodings==0.5.1
 Werkzeug==1.0.1
-widgetsnbextension @ file:///D:/bld/widgetsnbextension_1605475695976/work
-win-inet-pton @ file:///D:/bld/win_inet_pton_1610147566231/work
+widgetsnbextension==3.5.1
+win-inet-pton==1.1.0
+win-unicode-console==0.5
 wincertstore==0.2
-wordcloud==1.8.1
-zipp @ file:///home/conda/feedstock_root/build_artifacts/zipp_1614945704755/work
+wrapt==1.12.1
+xarray @ file:///home/conda/feedstock_root/build_artifacts/xarray_1614346479764/work
+xgboost==1.3.3
+xlrd==1.2.0
+XlsxWriter @ file:///tmp/build/80754af9/xlsxwriter_1602692860603/work
+xlwings==0.20.8
+xlwt==1.3.0
+xmltodict==0.12.0
+yapf @ file:///tmp/build/80754af9/yapf_1593528177422/work
+zict==2.0.0
+zipp @ file:///tmp/build/80754af9/zipp_1604001098328/work
+zope.event==4.5.0
+zope.interface @ file:///C:/ci/zope.interface_1602002494740/work
